# multjs

./: CLASS_TEST_SUMMARY.md  CLAUDE.md  CMakeLists.txt  COPYRIGHT_TEMPLATE.md  CPP_TRANSLATOR_PLAN.md  DOXYGEN_STYLE_GUIDE.md  INTEGRATION_TEST_PLAN.md  PROGRESS_SUMMARY.md  README.md  check_coverage.sh  multiple-js.sln  test_computed_access.cpp
.claude/: settings.local.json
cpp_gen/: code_emitter.cpp  code_emitter.h  cpp_code_generator.cpp  cpp_code_generator.h  cpp_type.cpp  cpp_type.h  mjs_runtime.h  name_mangler.cpp  name_mangler.h  type_inference_engine.cpp  type_inference_engine.h
docs/: COMPLETE_UNIT_TEST_PLAN.md  jit_readme.md
examples/: CUSTOM_INIT_FUNCTION.md  README_CPP_GEN.md  function_example.js  game_logic.cpp  game_logic.js  game_logic_gen.cpp  game_objects.js  object_example.js  simple_example.js  test_object.js
include/mjs/: arr_obj.h  array_object.h  async_object.h  bytecode.h  bytecode_table.h  class.h  class_def.h  class_def_table.h  class_id.h  closure.h  const_def.h  const_index_embedded.h  const_pool.h  constant.h  context.h  cpp_module.h  debug.h  error.h  exception.h  func_obj.h  function_def.h  function_object.h  function_type.h  gc_manager.h  generator_class_def.h  generator_object.h  global_const_pool.h  intrusive_list.hpp  job.h  job_queue.h  key_const_index_table.h  line_table.h  local_const_pool.h  module_def.h  module_manager.h  module_mgr.h  new_token.h  noncopyable.h  object.h  opcode.h  (+27 more)
multiple-js/: arr_obj.h  codegener.cpp  codegener.h  const_pool.cpp  const_pool.h  exp.cpp  exp.h  func_obj.cpp  func_obj.h  instr.cpp  instr.h  lexer.cpp  lexer.h  multiple-js.cpp  multiple-js.vcxproj  multiple-js.vcxproj.filters  object.cpp  object.h  parser.cpp  parser.h  section.cpp  section.h  stack_frame.cpp  stack_frame.h  stat.cpp  stat.h  test.js  token.cpp  token.h  up_obj.h  value.cpp  value.h  vm.cpp  vm.h
src/: bytecode.cpp  bytecode.h  bytecode_table.cpp  class.cpp  class_def.cpp  class_def_table.cpp  codegener.cpp  codegener.h  const_pool.cpp  const_pool.h  context.cpp  context.h  error.cpp  exp.h  func_obj.cpp  func_obj.h  function_def.cpp  function_object.cpp  global_const_pool.cpp  instr.cpp  instr.h  key_const_index_table.cpp  lexer.cpp  lexer.h  local_const_pool.cpp  module_def.cpp  module_manager.cpp  module_mgr.cpp  noncopyable.h  object.cpp  parser.cpp  parser.h  promise_class_def.cpp  promise_object.cpp  property_map.cpp  property_map_.cpp  runtime.cpp  runtime.h  scope.h  shape.cpp  (+17 more)
src/class_def/: array_class_def.cpp  array_object_class_def.cpp  class_def.cpp  function_object_class_def.cpp  generator_class_def.cpp  generator_object_class_def.cpp  iterator_object_class_def.cpp  object_class_def.cpp  promise_class_def.cpp  promise_object_class_def.cpp  string_object_class_def.cpp  symbol_class_def.cpp
src/class_def_impl/: array_object_class_def.cpp  function_object_class_def.cpp  generator_object_class_def.cpp  iterator_object_class_def.cpp  object_class_def.cpp  promise_object_class_def.cpp  string_object_class_def.cpp  symbol_class_def.cpp
src/compiler/: code_generator.cpp  code_generator.h  codegener.cpp  codegener.cpp.bak  codegener.h  codegener.h.bak  exp.h  expression.cpp  expression.h  jump_manager.cpp  jump_manager.h  lexer.cpp  lexer.h  parser.cpp  parser.h  repair_def.h  scope.cpp  scope.h  scope_manager.cpp  scope_manager.h  stat.cpp  stat.h  statement.cpp  statement.h  token.cpp  token.h
src/gc/: gc_allocator.cpp  gc_heap.cpp  gc_manager.cpp  gc_object.cpp  new_space.cpp  old_space.cpp
src/jit/: baseline_compiler.cpp  jit_code.cpp  jit_manager.cpp  jit_stubs.cpp
src/object/: function_object.cpp  generator_object.cpp  module_object.cpp  object.cpp  promise_object.cpp
src/object_impl/: array_object.cpp  cpp_module_object.cpp  function_object.cpp  generator_object.cpp  module_object.cpp  promise_object.cpp
src/shape/: shape.cpp  shape_manager.cpp  shape_property.cpp  shape_property_hash_table.cpp  transition_table.cpp
src/value/: function_def.cpp  module_def.cpp  value.cpp
test/: arrow_function_test.js  async.js  branch.js  closure.js  exception.js  gc.js  generator.js  iterator.ts  lexer_test.cpp  module1.js  module2.js  object.js  object.ts  parser_test.cpp  test.cpp  test.js  test3.js  test_module.js  test_module1.js  test_module2.js  this.js
test/unit_test/: code_generator_test.cpp  lexer_test.cpp  parser_test.cpp
tests/cpp_gen/: code_emitter_test.cpp  cpp.cpp  cpp_type_test.cpp  integration_test.cpp  name_mangler_test.cpp  object_test.cpp
tests/integration/: async_integration_test.cpp  basic_integration_test.cpp  class.js  class.ts  class_advanced.js  class_advanced_integration_test.cpp.bak  class_edge_cases.js  class_execution.js  class_integration_test.cpp  class_simple.js  closure.js  compound_assign_test.js  cs_user_module_integration_test.cpp  exception.js  exception_integration_test.cpp  function_integration_test.cpp  generator.js  getter_setter_integration_test.cpp  iterator.ts  module2.js  object.js  object.ts  performance_integration_test.cpp  test.cpp  test_helper.cpp  test_helper.h
tests/jit/: baseline_compiler_test.cpp  hotness_counter_test.cpp
tests/unit/: VM_TEST_README.md  advanced_expression_test.cpp  assignment_expression_test.cpp  basic_statement_test.cpp  binary_expression_test.cpp  bytecode_test.cpp  call_new_expression_test.cpp  class_def_test.cpp  code_generator_test.cpp  conditional_expression_test.cpp  const_pool_test.cpp  control_flow_statement_test.cpp  declaration_statement_test.cpp  exception_statement_test.cpp  function_expression_test.cpp  function_module_test.cpp  gc_test.cpp  identifier_primary_expression_test.cpp  jump_manager_test.cpp  jump_statement_test.cpp  lexer_test.cpp  literal_expression_test.cpp  member_expression_test.cpp  module_statement_test.cpp  object_array_expression_test.cpp  object_shape_test.cpp  objects_test.cpp  parser_test.cpp  runtime_context_test.cpp  scope_manager_test.cpp  scope_test.cpp  stack_frame_test.cpp  test_helpers.h  type_system_test.cpp  unary_expression_test.cpp  value_test.cpp  vm_test.cpp
tools/: js2cpp.cpp
(+274 files in other folders)
